--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -399,7 +399,7 @@ body.dark-skin {
 }
 
 .dark-skin .skills-item .dots .dot {
-	background: #29a587;
+	background:#41b5f2;
 }
 
 .dark-skin .skills-item .dots .dot span {
