--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,6 +329,14 @@ button:before {
 	z-index: 1;
 }
 
+
+
+#theform a.btn:before,
+#theform .btn:before,
+#theform button:before {
+	z-index: -1;
+}
+
 .btn span,
 button span {
 	position: relative;
@@ -3649,7 +3657,7 @@ hr {
 .comment-respond label {
 	padding: 0;
 	display: block;
-	text-indent: 30px;
+	text-indent: 0px;
 	font-size: 14px;
 	text-transform: uppercase;
 	font-weight: 700;
