--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ b, strong {
   justify-content: center;
   border-radius: 100%;
   font-size: 1.25rem;
-  background: linear-gradient(88.13deg, #ADEB5C -6.92%, #61D5FF 122.29%);
+  background: #41b5f2;
   box-shadow: 0px 10px 20px rgba(4, 90, 150, 0.1);
   opacity: 0;
   visibility: hidden;
